--- a/index.html
+++ b/index.html
@@ -174,6 +174,11 @@
     }
 
     .container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
       max-width: 1200px;
       margin: auto;
       padding: 2rem;
@@ -1205,6 +1210,23 @@
 
     main, .container, body > main {
       padding-top: 90px !important;
+    }
+
+    .section-content {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+    }
+
+    @media (max-width: 900px) {
+      .section-content, .container {
+        padding: 1rem;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+      }
     }
   </style>
 </head>
